--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -1596,6 +1596,10 @@ releases:
       - hash: bc0098042f6ff7fbda89157bb66483ad65af0ce0
         repo: openstack/openstack-ansible
     version: 16.0.21
+  - projects:
+      - hash: 911c950612b4eb9cfafd7558f18754364624d512
+        repo: openstack/openstack-ansible
+    version: 16.0.22
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
