--- a/deliverables/rocky/horizon.yaml
+++ b/deliverables/rocky/horizon.yaml
@@ -33,6 +33,10 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: 19865eec5bc4a5a0ee402a55295dda2e52c2422c
+  - projects:
+      - hash: 0ccfce882749998f3a6a7f9bfc6fa74ea346ca53
+        repo: openstack/horizon
+    version: 14.0.2
 repository-settings:
   openstack/horizon: {}
 branches:
