--- a/deliverables/rocky/octavia-tempest-plugin.yaml
+++ b/deliverables/rocky/octavia-tempest-plugin.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/octavia-tempest-plugin
         hash: 904a4481c9d44b8c784d11d3208cc6b8492124fb
+  - projects:
+      - hash: 70c06d8b646ac987736a6e8e281998af2548ae81
+        repo: openstack/octavia-tempest-plugin
+    version: 0.2.0
