--- a/deliverables/rocky/puppet-cinder.yaml
+++ b/deliverables/rocky/puppet-cinder.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 25b1ba399307deefced8d6ed404e1c91ff8ec9e1
         repo: openstack/puppet-cinder
     version: 13.3.1
+  - projects:
+      - hash: 36bb5fef6b9e6807fdbd7874e112913b0a177694
+        repo: openstack/puppet-cinder
+    version: 13.3.2
 branches:
   - location: 13.3.0
     name: stable/rocky
