--- a/deliverables/queens/puppet-cinder.yaml
+++ b/deliverables/queens/puppet-cinder.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: b5a3493d0b94d4320d9ecb6eb142e55d866b2841
         repo: openstack/puppet-cinder
     version: 12.4.0
+  - projects:
+      - hash: 1a0856ace6e9edb7de0f8d6f75429f6b4867d106
+        repo: openstack/puppet-cinder
+    version: 12.4.1
 repository-settings:
   openstack/puppet-cinder: {}
 branches:
