--- a/deliverables/rocky/bifrost.yaml
+++ b/deliverables/rocky/bifrost.yaml
@@ -14,6 +14,10 @@ releases:
       - hash: 1ea45d1e7a9556ead6b3707f657348a4e9cadfdb
         repo: openstack/bifrost
     version: 5.1.1
+  - projects:
+      - hash: a6086eb4b74d1981e840476cbe6f2a9eb0217419
+        repo: openstack/bifrost
+    version: 5.1.2
 branches:
   - location: 5.1.0
     name: stable/rocky
