--- a/deliverables/stein/python-zunclient.yaml
+++ b/deliverables/stein/python-zunclient.yaml
@@ -17,5 +17,9 @@ releases:
     projects:
       - repo: openstack/python-zunclient
         hash: f5787a4b83af6a924b7ac1680dad55c48ef666c7
+  - version: 3.2.1
+    projects:
+      - repo: openstack/python-zunclient
+        hash: 01a1d2f0e4531cae1a59126f795e2455c76b43a4
 repository-settings:
   openstack/python-zunclient: {}
