--- a/deliverables/rocky/cinder.yaml
+++ b/deliverables/rocky/cinder.yaml
@@ -37,6 +37,10 @@ releases:
       - hash: c118e8f92c353b69201ccdf19b66b9057ae95005
         repo: openstack/cinder
     version: 13.0.1
+  - projects:
+      - hash: 73baefac2f42a59f66bedcdddbb9debb3f324dff
+        repo: openstack/cinder
+    version: 13.0.2
 branches:
   - location: 13.0.0.0rc1
     name: stable/rocky
