--- a/deliverables/stein/os-brick.yaml
+++ b/deliverables/stein/os-brick.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: f29c669c8bf508cc41a82ea0a4052c8d75250459
         repo: openstack/os-brick
     version: 2.6.1
+  - projects:
+      - hash: bc1917dfeec68ddddac43774257f3df1e728c912
+        repo: openstack/os-brick
+    version: 2.6.2
