Do minor release for oslo.policy for bugfix
The latest release of oslo.policy was causing issues in RDO packaging.
The needed fix merged recently [1], and so, this release takes that into
use.

[1] https://review.openstack.org/619569

Change-Id: Ib03c4050d6ac78fd06cf4d0949c84e87da22ebc1

--- a/deliverables/stein/oslo.policy.yaml
+++ b/deliverables/stein/oslo.policy.yaml
@@ -29,3 +29,7 @@ releases:
       - hash: f79650325f459e12bbac8f6967dcfabece1de7a4
         repo: openstack/oslo.policy
     version: 1.41.0
+  - projects:
+      - hash: a10275772627caad4c4fa66effa26ecd2a6ecd7b
+        repo: openstack/oslo.policy
+    version: 1.41.1
