--- a/deliverables/stein/oslo.i18n.yaml
+++ b/deliverables/stein/oslo.i18n.yaml
@@ -17,3 +17,7 @@ releases:
         hash: e7b3ff20019dcde3796665eea7d5a1867e568630
         repo: openstack/oslo.i18n
     version: 3.22.1
+  - projects:
+      - hash: a5fde9a90a8216f70129c20d348f1f615b8842f3
+        repo: openstack/oslo.i18n
+    version: 3.23.0
