Make 1.4.0 release of os-service-types
Contains the switch of placement to its own thing.

Change-Id: I11a095de1c2c7a11323d5d6a11634f64e716997f

--- a/deliverables/_independent/os-service-types.yaml
+++ b/deliverables/_independent/os-service-types.yaml
@@ -14,5 +14,9 @@ releases:
     projects:
       - repo: openstack/os-service-types
         hash: 2e5b38088a43539621de82aa2d0c1b366c2638a9
+  - version: 1.4.0
+    projects:
+      - repo: openstack/os-service-types
+        hash: b6f014da2af10641826478e1475f990bb37b8bc1
 repository-settings:
   openstack/os-service-types: {}
