--- a/deliverables/stein/openstacksdk.yaml
+++ b/deliverables/stein/openstacksdk.yaml
@@ -17,5 +17,9 @@ releases:
       - hash: 9947219c4ee8da7b5d8478f0904fbb6f48f9a457
         repo: openstack/openstacksdk
     version: 0.19.0
+  - projects:
+      - hash: 6ad1a4c2a2ae745fff0baea12c305d874585bf73
+        repo: openstack/openstacksdk
+    version: 0.20.0
 repository-settings:
   openstack/openstacksdk: {}
