--- a/deliverables/rocky/oslo.service.yaml
+++ b/deliverables/rocky/oslo.service.yaml
@@ -41,6 +41,10 @@ releases:
       - hash: 6566ec5e4b143f47a835223e5bcbe68766c52f7a
         repo: openstack/oslo.service
     version: 1.31.6
+  - projects:
+      - hash: d555763f8f2fd56ae3e11990d095a52097e452f4
+        repo: openstack/oslo.service
+    version: 1.31.7
 branches:
   - location: 1.31.3
     name: stable/rocky
