--- a/deliverables/queens/designate-dashboard.yaml
+++ b/deliverables/queens/designate-dashboard.yaml
@@ -30,6 +30,10 @@ releases:
       - repo: openstack/designate-dashboard
         hash: 697adb82e62b8fa1101d7923c27ff4fc30cbcb77
     version: 6.0.0
+  - version: 6.0.1
+    projects:
+      - repo: openstack/designate-dashboard
+        hash: e9d8ad0b5071177e0b96653007e9d11971965741
 branches:
   - location: 6.0.0.0rc1
     name: stable/queens
