Create rocky branches for devstack-plugin-[amqp1|kafka]
Per d93603fe4e29b34a443a09d0e3acf6a3db45c990 we wanted to start
branching these repos to avoid breaking stable branches while working
on new features.

Change-Id: I2cfae69478562add8000b9a5b3e7024f47dbd71d

--- a/deliverables/rocky/devstack-plugin-amqp1.yaml
+++ b/deliverables/rocky/devstack-plugin-amqp1.yaml
@@ -4,5 +4,9 @@ release-model: untagged
 team: oslo
 type: other
 stable-branch-type: tagless
+branches:
+  - location:
+      openstack/devstack-plugin-amqp1: dc1d5602504d070118f859d4fae6ce787fb216eb
+    name: stable/rocky
 repository-settings:
   openstack/devstack-plugin-amqp1: {}
