--- a/deliverables/rocky/devstack-plugin-kafka.yaml
+++ b/deliverables/rocky/devstack-plugin-kafka.yaml
@@ -4,5 +4,9 @@ release-model: untagged
 team: oslo
 type: other
 stable-branch-type: tagless
+branches:
+  - location:
+      openstack/devstack-plugin-kafka: 264cee304498b432aef14efed750a3a87878c4ef
+    name: stable/rocky
 repository-settings:
   openstack/devstack-plugin-kafka: {}
