--- a/deliverables/stein/ironic-python-agent.yaml
+++ b/deliverables/stein/ironic-python-agent.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: f63099ebb68e3a29afc3fd923259aada2feb7074
         repo: openstack/ironic-python-agent
     version: 3.4.0
+  - projects:
+      - hash: a76567d9e5e0e7b01c1afb78217b82c369dbc7a8
+        repo: openstack/ironic-python-agent
+    version: 3.5.0
