--- a/deliverables/_independent/rally.yaml
+++ b/deliverables/_independent/rally.yaml
@@ -126,5 +126,9 @@ releases:
     projects:
       - repo: openstack/rally
         hash: 4ddf0bdb7120dcbaf85c40ebd383c279db8e3fc6
+  - version: 1.3.0
+    projects:
+      - repo: openstack/rally
+        hash: e22c247e1ed27ed143697e266e6adb7954ede1a3
 repository-settings:
   openstack/rally: {}
