tripleo-heat-templates 10.2.0
Remove unnecessary logs due to misconfiguration from pacemaker:
change: I2f028ec7ac6cb280f5ddf30b12ff138cf20cd0fd

Change-Id: Iad1861f2d1ec57d8648df6cedc8a412d668ff490

--- a/deliverables/stein/tripleo-heat-templates.yaml
+++ b/deliverables/stein/tripleo-heat-templates.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 03ca0e5d31ba94aa4f3af0724df0ab657ab76c05
         repo: openstack/tripleo-heat-templates
     version: 10.1.0
+  - projects:
+      - hash: b6b4201be1bb1a29f4b6af30f7133bcf7e13c52b
+        repo: openstack/tripleo-heat-templates
+    version: 10.2.0
