--- a/deliverables/rocky/tripleo-heat-templates.yaml
+++ b/deliverables/rocky/tripleo-heat-templates.yaml
@@ -32,6 +32,10 @@ releases:
       - hash: 888743ce76920740e720452c4f0b1c3edf9c3062
         repo: openstack/tripleo-heat-templates
     version: 9.0.0
+  - projects:
+      - hash: 2f12128d6ee06c56be3bd739d97897666f56a533
+        repo: openstack/tripleo-heat-templates
+    version: 9.1.0
 branches:
   - location: 9.0.0.0rc1
     name: stable/rocky
