--- a/deliverables/stein/neutron-lib.yaml
+++ b/deliverables/stein/neutron-lib.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 8dc31ec5f2db6e6ff5b2b4d4a27c239de5e12cfb
         repo: openstack/neutron-lib
     version: 1.20.0
+  - projects:
+      - hash: 700b28fe1e2a28ed09bb4392b4bdcaec00b56784
+        repo: openstack/neutron-lib
+    version: 1.21.0
